# incubator-smppd

./: .gitignore  Cargo.toml  DESIGN.md  IMPLEMENTATION.md  README.md  ROADMAP.md
benches/: events.rs  loadbalancer.rs  router.rs  store.rs  wal.rs
examples/: config.yaml  firewall.yaml
plugins/: cost_router.lua  spam_filter.lua
src/: lib.rs  main.rs
src/admin/: handlers.rs  mod.rs  server.rs
src/bootstrap/: events.rs  mod.rs  server.rs  shutdown.rs  state.rs  worker.rs
src/cdr/: mod.rs  types.rs  writer.rs
src/cluster/: circuit_breaker.rs  endpoint.rs  health.rs  lb.rs  mock.rs  mod.rs  pool.rs
src/config/: loader.rs  mod.rs  types.rs  watcher.rs
src/config/store/: file.rs  memory.rs  mod.rs
src/feedback/: memory.rs  mod.rs  types.rs
src/filter/: auth.rs  chain.rs  esme.rs  firewall.rs  mod.rs  ratelimit.rs  request.rs
src/firewall/: context.rs  engine.rs  mod.rs  types.rs
src/forwarder/: dlr.rs  mod.rs  processor.rs  retry.rs
src/listener/: acceptor.rs  connection.rs  mod.rs  registry.rs  session.rs
src/pipeline/: filter.rs  forwarder.rs  mod.rs  response.rs  router.rs
src/plugins/: context.rs  hooks.rs  mod.rs  types.rs
src/plugins/loader/: lua.rs  mod.rs  native.rs  wasm.rs  webhook.rs
src/router/: matcher.rs  mod.rs  pricing.rs  router.rs
src/store/: factory.rs  memory.rs  mod.rs  persistent.rs  scheduler.rs  types.rs
src/telemetry/: metrics.rs  mod.rs  tracing.rs
tests/: admin_api.rs
