[package]
name = "smppd"
version = "0.1.0"
edition = "2024"
description = "High-performance SMPP proxy and router"
license = "Apache-2.0"
repository = "https://github.com/getkatembe/smppd"

[dependencies]
# Protocol
smpp = { path = "../smpp-rs" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tower middleware
tower = { version = "0.5", features = ["full"] }
tower-service = "0.3"
tower-layer = "0.3"

# HTTP API
axum = { version = "0.8", features = ["ws"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = "0.13"

# Utils
bytes = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
humantime = "2"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["full"]
full = ["lua", "hlr", "campaign", "queue"]
lua = ["dep:mlua"]
hlr = []
campaign = []
queue = []

[dependencies.mlua]
version = "0.10"
features = ["lua54", "async"]
optional = true

[[bin]]
name = "smppd"
path = "src/main.rs"
