[package]
name = "smppd"
version = "0.1.0"
edition = "2024"
description = "High-performance SMPP proxy and router"
license = "Apache-2.0"
repository = "https://github.com/getkatembe/smppd"

[dependencies]
# Protocol
smpp = { path = "../smpp-rs" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tower middleware
tower = { version = "0.5", features = ["full"] }
tower-service = "0.3"
tower-layer = "0.3"

# HTTP API
axum = { version = "0.8", features = ["ws"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Config (YAML/JSON/TOML)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# Metrics (OTEL → Prometheus)
opentelemetry-prometheus = "0.27"
prometheus = "0.13"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Pure Rust persistent storage (LSM-tree like RocksDB)
fjall = "2"

# XDG directory paths
dirs = "5"

# Unix system calls (for getuid)
libc = "0.2"

# Utils
bytes = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
humantime = "2"
num_cpus = "1"
tempfile = "3"
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1"
chrono = "0.4"
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json"] }
ipnet = "2"

# Async channel for bus
flume = "0.11"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["full"]
full = ["lua", "wasm", "native", "hlr", "campaign", "queue"]
lua = ["dep:mlua"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
native = ["dep:libloading"]
hlr = []
campaign = []
queue = []

[dependencies.mlua]
version = "0.10"
features = ["lua54", "async", "send", "serialize"]
optional = true

[dependencies.wasmtime]
version = "28"
optional = true

[dependencies.wasmtime-wasi]
version = "28"
optional = true

[dependencies.libloading]
version = "0.8"
optional = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "store"
harness = false

[[bench]]
name = "wal"
harness = false

[[bench]]
name = "events"
harness = false

[[bench]]
name = "router"
harness = false

[[bench]]
name = "loadbalancer"
harness = false

[[bin]]
name = "smppd"
path = "src/main.rs"
